--- a/tests/src/templates/base.html
+++ b/tests/src/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Skua Test Site</title>
     <!-- Load Sabre CSS https://sabrecss.netlify.com -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/teymour-aldridge/sabre@master/sass/styles.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/teymour-aldridge/sabre@master/styles.min.css">
 </head>
 <body>
 <h1 class="site-name">{{ site_name }}</h1>
